fix: Add missing link to Add Product page from Mobile Top Header. style: Change Select Main Product Image button so that it stands out more from the other input elements on the Add Product page. Add mt-2 to add space above it, which also makes it more visible.

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -359,10 +359,10 @@ input[name="q"]::placeholder {
 }
 
 .btn-grey-outline {
-    background-color: transparent;
+    background-color: #ced4da;
     border: 1px solid #ced4da;
     color: #333333;
-    font-weight: 600;
+    font-weight: 500;
 }
 
 .btn-grey-outline:hover,
